--- a/config.json
+++ b/config.json
@@ -1,31 +1,18 @@
 {
-  "admin_port": 9000,
+  "admin_port": 12000,
   "streams": [
     {
-      "name": "Example FM",
-      "source_url": "http://stream.example.com/radio",
-      "port": 8080,
+      "name": "Radio1000",
+      "source_url": "http://stream.radio1000.tk:8880/radio1000_high.mp3",
+      "port": 12001,
       "proxy": {
-        "type": "socks5",
-        "address": "127.0.0.1:1080",
+        "type": "http",
+        "address": "10.0.0.100:8888",
         "username": "",
         "password": ""
       },
       "reconnect_delay_secs": 3,
       "max_reconnect_delay_secs": 60
-    },
-    {
-      "name": "Jazz Radio",
-      "source_url": "http://jazz.example.net/live",
-      "port": 8081,
-      "proxy": {
-        "type": "http",
-        "address": "proxy.example.com:3128",
-        "username": "proxyuser",
-        "password": "proxypass"
-      },
-      "reconnect_delay_secs": 5,
-      "max_reconnect_delay_secs": 120
     }
   ]
 }
